fix: overflow da segunda imagem na parte de salgados

--- a/styles.css
+++ b/styles.css
@@ -273,7 +273,6 @@ main {
 
 .savory-image {
     flex: 1;
-    width: 50%;
     height: auto;
     object-fit: cover;
     border-radius: 20px;
